--- a/.github/workflows/deploy-digital-ocean.yml
+++ b/.github/workflows/deploy-digital-ocean.yml
@@ -99,7 +99,7 @@ jobs:
             service php8.0-fpm reload
 
       - name: Config:Cache Cleaning
-        run: php artisan config:cache
+        run: ${BASE_PATH}/current php artisan config:cache
 
       - name: Route:Cache Cleaning
         run: php artisan route:cache
