--- a/.github/workflows/deploy-digital-ocean.yml
+++ b/.github/workflows/deploy-digital-ocean.yml
@@ -114,7 +114,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
-          envs: RELEASE_PATH, ARTIFACTS_PATH
+          envs: RELEASE_PATH, ARTIFACTS_PATH, CURRENT_PATH
           script: |
             cd $RELEASE_PATH && ls -t -1 | tail -n +6 | xargs rm -rf
             cd $ARTIFACTS_PATH && ls -t -1 | tail -n +6 | xargs rm -rf
