--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
         "monolog/monolog": "^2.3",
+        "socialiteproviders/google": "^4.1",
         "spatie/laravel-permission": "^5.4"
     },
 
