--- a/.github/workflows/deploy-digital-ocean.yml
+++ b/.github/workflows/deploy-digital-ocean.yml
@@ -121,6 +121,7 @@ jobs:
             cd $CURRENT_PATH && php artisan config:cache
             cd $CURRENT_PATH && php artisan view:cache
             cd $CURRENT_PATH && php artisan route:cache
+            cd $CURRENT_PATH && php artisan optimize:clear
 
 
 
