--- a/.github/workflows/deploy-digital-ocean.yml
+++ b/.github/workflows/deploy-digital-ocean.yml
@@ -120,6 +120,7 @@ jobs:
             cd $ARTIFACTS_PATH && ls -t -1 | tail -n +6 | xargs rm -rf
             cd $CURRENT_PATH && php artisan config:cache
             cd $CURRENT_PATH && php artisan view:cache
+            cd $CURRENT_PATH && php artisan route:cache
 
 
 
