--- a/composer.json
+++ b/composer.json
@@ -12,20 +12,22 @@
         "guzzlehttp/guzzle": "^7.4",
         "laravel/cashier-paddle": "^1.4",
         "laravel/fortify": "^1.10",
-        "laravel/framework": "^8.54",
+        "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
         "monolog/monolog": "^2.3",
         "socialiteproviders/google": "^4.1",
-        "spatie/laravel-permission": "^5.4"
+        "spatie/laravel-permission": "^5.4",
+        "symfony/http-client": "^6.0",
+        "symfony/mailgun-mailer": "^6.0"
     },
 
     "require-dev": {
-        "facade/ignition": "^2.5",
+        "spatie/laravel-ignition": "^1.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^5.10",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.8"
     },
 
