--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
         "monolog/monolog": "^2.3",
+        "ramsey/uuid": "^4.2",
         "socialiteproviders/google": "^4.1",
         "spatie/laravel-permission": "^5.4",
         "symfony/http-client": "^6.0",
