--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "beyondcode/laravel-websockets": "^1.13",
         "fakerphp/faker": "^1.9.1",
         "fruitcake/laravel-cors": "^2.0",
         "google/apiclient": "^2.12",
         "guzzlehttp/guzzle": "^7.4",
+        "guzzlehttp/psr7": "^1.5",
         "laravel/cashier-paddle": "^1.4",
         "laravel/fortify": "^1.10",
         "laravel/framework": "^9.0",
@@ -17,6 +19,7 @@
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
         "monolog/monolog": "^2.3",
+        "pusher/pusher-php-server": "^5.0",
         "ramsey/uuid": "^4.2",
         "socialiteproviders/google": "^4.1",
         "spatie/laravel-permission": "^5.4",
