--- a/.github/workflows/deploy-digital-ocean.yml
+++ b/.github/workflows/deploy-digital-ocean.yml
@@ -121,7 +121,7 @@ jobs:
             cd $CURRENT_PATH && php artisan config:cache
             cd $CURRENT_PATH && php artisan view:cache
             cd $CURRENT_PATH && php artisan route:cache
-            cd $CURRENT_PATH && php artisan websocket:serve
+            cd $CURRENT_PATH && php artisan websocket:serve --host=127.0.0.1
 
 
 
