--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/cashier-paddle": "^1.4",
         "laravel/fortify": "^1.10",
         "laravel/framework": "^9.0",
+        "laravel/horizon": "^5.9",
         "laravel/sanctum": "^2.14",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
